Work in progress with PersistentLinkedHashSet. Fix issues in PersistentHashSet.